istio-ingressgateway-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-local
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - name: http2-local
      protocol: TCP
      port: 8081
      targetPort: 8080
