k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resttemplateclient
  labels:
    app: resttemplateclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resttemplateclient
  template:
    metadata:
      labels:
        app: resttemplateclient
    spec:
      containers:
        - name: resttemplateclient
          image: yklee2002/resttemplateclient:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: resttemplateclient-service
  labels:
    app: resttemplateclient
spec:
  type: NodePort
  selector:
    app: resttemplateclient
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30103
