virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: resttemplateclient-vs

spec:
  hosts:
    - "*"

  gateways:
    - istio-gateway

  http:
    - match:
        - uri:
            prefix: /client

      rewrite:
        uri: /

      route:
        - destination:
            host: resttemplateclient-service
            port:
              number: 8080
